--- a/StackQuestionsWeb/StackQuestionsWeb/Views/Home/Index.cshtml
+++ b/StackQuestionsWeb/StackQuestionsWeb/Views/Home/Index.cshtml
@@ -1,5 +1,53 @@
-﻿@{
-    ViewBag.Title = "Index";
+﻿@using PagedList;  
+  
+@using PagedList.Mvc;  
+  
+@model StaticPagedList<StackQuestionsWeb.Models.Item>
+
+@{
+    ViewBag.Title = "Home Page";
 }
 
-<h2>Index</h2>
+<div class="col-md-12">
+    <div class="col-md-8 col-md-offset-2">
+        @using (Html.BeginForm(new {@class ="form-horizontal"}))
+        {
+            <div class="form-inline">
+                <div class="form-group">
+                    Search by name: <input type="text" name="text" class="form-control"> 
+                    Search by tag:  <input type="text" name="tag" class="form-control"> 
+                    <input type="submit" class="btn btn-default" value="Search" />
+                </div>
+            </div>    
+        }
+    </div>
+    
+    @foreach (var item in Model)
+    {       
+        <div class="row">            
+            <div class="col-md-8 col-md-offset-2">
+                <hr />
+                <div class="col-md-2">
+                    <div class="label label-info">Votes @Html.DisplayFor(modelItem => item.Score)</div>
+                </div>
+                <div class="col-md-10">
+                    <a href=@item.Link >@item.Title</a><br />
+                    @foreach (var t in item.Tags)
+                    {
+                        <span class="label label-primary"> @Html.DisplayFor(modelItem => t)</span> 
+                    }                     
+                </div>
+            </div>
+        </div>       
+    }
+</div>
+
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+ 
+
+@Html.PagedListPager(Model, pageNumber => Url.Action("Index", new {  
+    pageNumber,
+text = Request.QueryString["text"],  
+tag = Request.QueryString["tag"]    
+}))
